--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/miguelmballeza/Grupo_13_ecommerceBGG#readme",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   }
 }
