Modificación de Entry Point, Controllers, Routes e instalación.
Se agrego la funcionalidad pertinente para que el controlador de
productDetail pueda tratar a una ruta que no es númerica; además se
modifico el nombre de la página de inicio de sesión a 'Iniciar Sesión';
Se limpio el código de routes/index; en routes/productsRouter se cambio
el orden de las rutas para que primero considerará 'crear' y 'editar' y
no acceder siempre a la ruta ':id'; y finalmente en el Entry Point se
realizo la definición de la configuración pertinente para obtener la
información de todos los formularios con 'method=POST' en un objeto
literal (propiedad-valor) además de transformarlo a un archivo con
extensión o formato JSON; además de la configuración necesaria para
poder hacer la correcta sobreescritura de métodos de petición HTTP en
los formularios de la Aplicación Web que lo requieran y asi aumentar la
prolijidad en el orden de la misma aplicación, y los archivos JSON
fueron modificado por la instalación de la dependencia 'method-override'
ya mencionada para la sobreescritura de métodos de los formularios con
PUT y DELETE.

--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/miguelmballeza/Grupo_13_ecommerceBGG#readme",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "method-override": "^3.0.0"
   }
 }
