--- a/src/package.json
+++ b/src/package.json
@@ -25,6 +25,8 @@
     "express-validator": "^6.12.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
-    "mysql2": "^2.3.0"
+    "mysql2": "^2.3.0",
+    "node-fetch": "^2.6.1",
+    "sequelize": "^5.22.4"
   }
 }
